# danil_project

./: .gitignore  README.md  compose.yaml  docker-compose.yaml  model.py  nginx.conf  requirements.txt
backend/: .dockerignore  config.py  db.py  main.py  models.py  pyproject.toml  requirements.txt
bot/: Dockerfile  main.py  pyproject.toml  requirements.txt
client/: Dockerfile  nginx.conf  package-lock.json  package.json
client/src/lib/components/: HomeHeader.svelte  ListProduct.svelte
client/src/lib/types/: types.ts
client/src/routes/: +page.svelte
client/src/routes/cart/: +page.svelte
client/src/routes/register/: +page.svelte
